# VibeX-master

./: Cargo.toml  README.md  firedbg.toml
docs/: structure_workspace.md
firedbg/: target-unit-test.json  target.json
firedbg/libs/lib-auth/migration/src/: lib.rs.firedbg.map  m20241008_203354_add_users_table.rs.firedbg.map  main.rs.firedbg.map
firedbg/libs/lib-auth/src/: errors.rs.firedbg.map  lib.rs.firedbg.map
firedbg/libs/lib-auth/src/api/: mod.rs.firedbg.map
firedbg/libs/lib-auth/src/api/handlers/: mod.rs.firedbg.map
firedbg/libs/lib-auth/src/api/router/: mod.rs.firedbg.map
firedbg/libs/lib-auth/src/config/: mod.rs.firedbg.map
firedbg/libs/lib-auth/src/models/: mod.rs.firedbg.map  prelude.rs.firedbg.map  user.rs.firedbg.map
firedbg/libs/lib-auth/src/repository/: mod.rs.firedbg.map
firedbg/libs/lib-auth/src/utils/: mod.rs.firedbg.map
firedbg/libs/lib-user/migration/src/: lib.rs.firedbg.map  m20241008_204022_add_profiles_table.rs.firedbg.map  main.rs.firedbg.map
firedbg/libs/lib-user/src/: errors.rs.firedbg.map  lib.rs.firedbg.map
firedbg/libs/lib-user/src/api/: errors.rs.firedbg.map  mod.rs.firedbg.map
firedbg/libs/lib-user/src/api/handlers/: mod.rs.firedbg.map
firedbg/libs/lib-user/src/api/router/: mod.rs.firedbg.map
firedbg/libs/lib-user/src/config/: db.rs.firedbg.map  mod.rs.firedbg.map
firedbg/libs/lib-user/src/models/: mod.rs.firedbg.map
firedbg/libs/lib-user/src/repository/: mod.rs.firedbg.map
firedbg/libs/lib-user/src/utils/: mod.rs.firedbg.map
firedbg/services/service-auth/migration/src/: lib.rs.firedbg.map  m20241007_060541_table_users.rs.firedbg.map  main.rs.firedbg.map
firedbg/services/service-auth/src/: client.rs.firedbg.map  lib.rs.firedbg.map  server.rs.firedbg.map
firedbg/services/service-user/src/: client.rs.firedbg.map  lib.rs.firedbg.map  server.rs.firedbg.map
firedbg/system/src/: error.rs.firedbg.map  main.rs.firedbg.map
libs/lib-account/: Cargo.toml
libs/lib-account/migration/: Cargo.toml
libs/lib-account/migration/src/: lib.rs  m20241009_163449_add_users_table.rs  m20241009_163516_add_profiles_table.rs  main.rs
libs/lib-account/src/: lib.rs
libs/lib-account/src/api/handlers/: error.rs  mod.rs
libs/lib-account/src/api/router/: mod.rs
libs/lib-account/src/config/: state.rs
libs/lib-account/src/models/: inputs.rs  mod.rs  payload.rs  payloads.rs  prelude.rs  profile.rs  response.rs  user.rs
libs/lib-account/src/repository/: error.rs  mod.rs  mutation.rs  query.rs  service.rs  user_repo.rs
libs/lib-account/src/repository/mutations/: mod.rs  user_mutation.rs
libs/lib-account/src/repository/queries/: mod.rs  user_query.rs
libs/lib-account/src/services/: mod.rs
libs/lib-auth/: Cargo.toml
libs/lib-auth/migration/: Cargo.toml
libs/lib-auth/migration/src/: lib.rs  m20241007_181918_create_user_table.rs  m20241008_203354_add_users_table.rs  main.rs
libs/lib-user/: Cargo.toml
libs/lib-user/migration/: Cargo.toml
libs/lib-user/migration/src/: lib.rs  m20241008_204022_add_profiles_table.rs  main.rs
libs/lib-user/src/: lib.rs
libs/lib-user/src/api/: mod.rs
libs/lib-user/src/api/router/: mod.rs
libs/lib-utils/: Cargo.toml
libs/lib-utils/src/: lib.rs
libs/lib-utils/src/utils/: envs.rs  mod.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs
services/service-account/: Cargo.toml
services/service-account/src/: client.rs  server.rs
services/service-auth/: Cargo.toml
services/service-auth/src/: client.rs  server.rs
services/service-user/: Cargo.toml
services/service-user/src/: client.rs
system/: Cargo.toml
system/src/: main.rs
