[package]
name = "lib_auth"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
validator = { workspace = true }

migration_auth = { path = "migration" }
